--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-1.63MB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-576.1KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: 89.31.126.225, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
   - {name: 🇨🇳 中国-224.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-464.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-3.38MB/s(Youtube:不良林), server: 213.183.59.211, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇳🇱 荷兰-2.35MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇨🇳 中国-5.79MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 波兰-2.48MB/s(Youtube:不良林), server: 217.30.10.66, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇳🇱 荷兰-1.36MB/s(Youtube:不良林), server: 213.183.59.206, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
   - {name: 🇺🇸 美国-1.61MB/s(Youtube:不良林), server: 38.121.43.71, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-433.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-824.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-224.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-464.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.38MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
+      - 波兰-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
