--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-3.34MB/s(Youtube:不良林), server: 46.182.107.137, port: 443, type: vmess, uuid: 4ec0ae62-de09-4029-904a-0313d4628ecf, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/290016213035, ws-headers: {Host: 46.182.107.137}}
-  - {name: 🇺🇸 美国-576.1KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.121.43.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-3.01MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇳🇱 荷兰-1.34MB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇨🇳 中国-5.20MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 捷克-624.6KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇳🇱 荷兰-1.89MB/s(Youtube:不良林), server: 37.120.192.158, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-282.1KB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-824.3KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-789.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-486.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇫🇷 法国-1.10MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-2.14MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 20.239.176.94, port: 443, type: vmess, uuid: 4adf9138-5aca-4a26-b217-335e72bb680d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.239.176.94}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-3.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-576.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.20MB/s(Youtube:不良林)
+      - 捷克-624.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-824.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-789.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-486.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.10MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
